--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <link rel="icon" href="data:,">
         <title>Frogger</title>
-        <link type="text/css" rel="stylesheet" href="style.css">
+        <link type="text/css" rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://use.typekit.net/ipz1rsb.css">
         <script type="text/javascript" src="gl-matrix-min.js"></script>
         <script type="module" src="rasterize.js"></script>
