--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="icon" href="data:,">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Frogger</title>
+        <link rel="icon" href="data:,">
         <link type="text/css" rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://use.typekit.net/ipz1rsb.css">
         <script type="text/javascript" src="gl-matrix-min.js"></script>
@@ -11,7 +12,9 @@
     </head>
 
     <body>
-        <canvas id="myWebGLCanvas"></canvas>
+        <div id="canvasWrapper">
+            <canvas id="myWebGLCanvas"></canvas>
+        </div>
 
         <h1 id="title">Frogger</h1>
 
@@ -20,24 +23,26 @@
             <h1 id="lives">Lives: 3</h1>
         </div>
 
-        <div id="loadingScreen">
-            <div id="loadingBackground"></div>
-            <div id="loadingText">Loading...</div>
+        <div class="menu" id="loadingScreen">
+            <div class="bg loading"></div>
+            <div class="text">
+                <h1>Loading...</h1>
+            </div>
         </div>
 
-        <div id ="pauseScreen" style="display:none">
-            <div id="pauseBackground"></div>
-            <div id="pauseText">
+        <div class ="menu" id="pauseScreen" style="display:none">
+            <div class="bg"></div>
+            <div class="text">
                 <h1>Paused</h1>
                 <h2 class="reset">Reset</h2>
             </div>
         </div>
 
-        <div id="endScreen" style="display:none">
-            <div id="endBackground"></div>
-            <div id="endText">
+        <div class="menu" id="endScreen" style="display:none">
+            <div class="bg"></div>
+            <div class="text">
                 <h1 id="message"></h1>
-            <h2 class="reset">Reset</h2>
+                <h2 class="reset">Reset</h2>
             </div>
         </div>
     </body>
