--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,24 +4,36 @@
 }
 
 html, body { 
+    margin: 0;
     width: 100%;
     height: 100%;
     background-color: #000000;
 }
 
-#myWebGLCanvas {
+#canvasWrapper {
     position: fixed;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    #myWebGLCanvas {
+        /* position: fixed; */
+        max-width: 100vw;
+        max-height: 100vh;
+    }
 }
+
 
 #title {
     display: block;
     position: fixed;
-    top: 1vh;
-    right: 1vw;
+    top: 24px;
+    right: 24px;
+    filter: drop-shadow(0 0 5px #000);
 
-    font-size: 2vw;
+    font-size: 36px;
     font-family: "bd-geminis", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -32,11 +44,12 @@ html, body {
 #scorePanel {
     display: block;
     position: fixed;
-    top: 1vh;
-    left: 1vw;
+    top: 24px;
+    left: 24px;
+    filter: drop-shadow(0 0 5px #000);
 
     h1 {
-        font-size: 2vw;
+        font-size: 36px;
         font-family: "bd-geminis", sans-serif;
         font-weight: 400;
         font-style: normal;
@@ -46,109 +59,42 @@ html, body {
     }
 }
 
-#loadingScreen {
+.menu {
     position: fixed;
-    width: 100%;
-    height: 100%;
-    display: block;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
-    #loadingBackground {
+    .bg {
         position: fixed;
-        width: 100%;
-        height: 100%;
-        padding: 0 0;
-        background-color: black;
-    }
-
-    #loadingText {
-        position: fixed;
-        width: 50vw;
-        height: 50vh;
-        padding: 25vh 25vw;
-        text-align: center;
-        display: block;
-        font-size: 9vw;
-        font-family: "bd-geminis", sans-serif;
-        font-weight: 400;
-        font-style: normal;
-        color: #00ff01;
-        user-select: none;
-    }
-}
-
-#pauseScreen {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-
-    #pauseBackground {
-        position: fixed;
-        width: 100%;
-        height: 100%;
-        padding: 0 0;
+        inset: 0 0 0 0;
         background-color: black;
         opacity: 0.5;
+        z-index: 0;
     }
 
-    #pauseText {
-        position: fixed;
-        width: 50vw;
-        height: 50vh;
-        padding: 25vh 25vw;
+    .bg.loading {
+        opacity: 1;
+    }
+
+    .text {
         text-align: center;
         font-family: "bd-geminis", sans-serif;
         font-weight: 400;
         font-style: normal;
         color: #00ff01;
-        user-select: none;
+        z-index: 50;
 
         h1 {
-            display: block;
-            font-size: 9vw;
+            font-size: 72px;
+            user-select: none;
         }
-    
+
         h2 {
-            display: inline-block;
-            font-size: 4vw;
-            cursor: pointer;
-        }
-    }
-}
-
-#endScreen {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-
-    #endBackground {
-        position: fixed;
-        width: 100%;
-        height: 100%;
-        padding: 0 0;
-        background-color: black;
-        opacity: 0.5;
-    }
-
-    #endText {
-        position: fixed;
-        width: 50vw;
-        height: 50vh;
-        padding: 25vh 25vw;
-        text-align: center;
-        font-family: "bd-geminis", sans-serif;
-        font-weight: 400;
-        font-style: normal;
-        color: #00ff01;
-        user-select: none;
-
-        h1 {
-            display: block;
-            font-size: 9vw;
-        }
-    
-        h2 {
-            display: inline-block;
-            font-size: 4vw;
+            font-size: 48px;
             cursor: pointer;
         }
     }
