More style changes

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -94,6 +94,7 @@ html, body {
         }
 
         h2 {
+            margin-top: 18px;
             font-size: 48px;
             cursor: pointer;
         }
