--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,13 @@
             <h1 id="lives">Lives: 3</h1>
         </div>
 
+        <div id="explosionPanel" style="display: none;">
+            <div id="cooldownBar">
+                <span id="progress"></span>
+            </div>
+            <h1>Press SPACE</h1>
+        </div>
+
         <div class="menu" id="loadingScreen">
             <div class="bg loading"></div>
             <div class="text">
